# moneyforward-api-rs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  lib.rs  token_manager.rs
src/endpoints/v1/: ex_report_unit.rs  ex_transaction.rs  expense_report.rs  mod.rs  office.rs  suspense_payment_report_unit.rs  utils.rs
src/endpoints/v2/: mod.rs
src/models/v1/: active_project_codes.rs  bank.rs  dept.rs  ex_item.rs  ex_office_member_setting.rs  ex_report.rs  ex_report_unit.rs  ex_transaction.rs  excise.rs  expense_report.rs  mf_file.rs  mod.rs  office.rs  position.rs  project_code.rs  suspense_payment_reports.rs
