[package]
name = "moneyforward-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
mockito = "1.4.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"
